fix: add lwawt exports to prevent macos crash