@@ -87,7 +87,9 @@ val baseJvmArgs = listOf(
     "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
     "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "-Dapp.dir=\$APPDIR",
-    "--add-exports=java.desktop/sun.awt=ALL-UNNAMED"
+    "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
+    "--add-exports=java.desktop/sun.lwawt=ALL-UNNAMED",
+    "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
 )
 
 val jvmArgs = if (isLinux) {
@@ -112,7 +114,7 @@ tasks.jpackage {
     
     appName = "Turtlebrowse"
     vendor = "(ing) Studios"
-    appVersion = "1.2.6"
+    appVersion = "1.2.7"
     copyright = "2026 (ing) Studios and Ethan Lee"
 
     input = layout.buildDirectory.dir("libs")
